--- a/sdhc_css_capstone.ipynb
+++ b/sdhc_css_capstone.ipynb
@@ -29,7 +29,7 @@
     "- 6. **Citations**\n",
     "- 7. **Appendix**\n",
     "    - 7.1 ARIMA\n",
-    "    - 7.2 Multiple Linear Regression w/ Quarter Dummies`\n",
+    "    - 7.2 Multiple Linear Regression w/ Quarter Dummies\n",
     "## 1.2 Background\n",
     "In San Diego County, nutrition insecurity remains a pressing challenge affecting approximately 813k residents as of June 2024, with disproportionate impacts on children, individuals living with disabilities, and people of color. The San Diego Hunger Coalition (SDHC) actively leads collaborative efforts to address this crisis through research, education, and advocacy, working toward ensuring every individual has access to three culturally appropriate and nutritious meals daily.\n",
     "\n",
